actions column hack fix, actions dont wrap

--- a/app/assets/stylesheets/transam_core/table-library/styles.css
+++ b/app/assets/stylesheets/transam_core/table-library/styles.css
@@ -405,3 +405,7 @@
 .right-align .cell-text{
     text-align: right;
 }
+
+.action-column .cell-text{
+    white-space: nowrap;
+}
